tdf#168943: Handle non-multimarked mark data

Add the respective code to ScTable::Apply, which somehow got lost in
commit b5da114b67b29c91d16f2cb618cf30e7aa1b068d (Move code applying
functor to selection from ScColumnData to ScTable, 2025-03-15).

Change-Id: I0a9b6d9695a604c091eaca4c7b4e822c4e8c8781
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/194386
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
Signed-off-by: Xisco Fauli <xiscofauli@libreoffice.org>
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/194418